# saga

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  example.html  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: _config.yml  example.html  how-it-works.md  index.md  installation.md  library_api.md  providers.md  reviewing.md  usage.md
docs/_includes/: head_custom.html  nav_footer_custom.html
docs/_sass/color_schemes/: saga.scss  saga_dark.scss
docs/adr/: 0001-chapter-videos-via-remotion.md
docs/assets/css/: just-the-docs-saga_dark.scss
saga/: __init__.py  block.py  cli.py  comments.py  comments_block.py  diff.py  generate.py  model.py  render.py  serve.py  video.py
saga/assets/: base.css  saga-merge.js  saga.css  saga.js  tokens.css
saga/prompts/: saga.md
saga/remotion/: package-lock.json  package.json  render.mjs  tsconfig.json
saga/remotion/src/: ChapterVideo.tsx  index.tsx
scripts/: check.sh  lint.sh  test.sh
skills/generate_saga/: SKILL.md
skills/read_saga_comments/: SKILL.md
tests/: conftest.py  test_block.py  test_cli.py  test_comments.py  test_comments_block.py  test_diff.py  test_generate.py  test_merge.py  test_model.py  test_public_api.py  test_render.py  test_serve.py
tests/cassettes/: generate_anthropic.yaml
