[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saga-cli"
version = "0.1.0"
description = "Generate a self-contained static HTML saga of a git diff — a chapter-by-chapter guided tour of a change."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jake Beresford" }]
keywords = ["diff", "git", "code-review", "llm", "documentation", "html"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Documentation",
]
dependencies = ["instructor", "anthropic", "openai"]

[project.urls]
Homepage = "https://github.com/JakeBeresford/saga"
Repository = "https://github.com/JakeBeresford/saga"
Issues = "https://github.com/JakeBeresford/saga/issues"

[project.scripts]
saga = "saga.cli:main"

# Test/dev dependencies (PEP 735). Install with `uv sync --group test` or
# `uv pip install -e . pytest vcrpy`. VCR records the LLM HTTP calls once and
# replays them offline; recorded auth headers are scrubbed (see tests/conftest.py).
[dependency-groups]
test = ["pytest", "vcrpy"]
# dev includes test so `ty check .` can resolve pytest/vcr in the test files.
dev = ["ruff", "ty", { include-group = "test" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Never let a cassette-less test reach the network: fail instead of recording.
addopts = "-q"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# pycodestyle (E/W), Pyflakes (F), isort (I), pyupgrade (UP), flake8-bugbear (B).
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.11"

# The prompt (prompts/) and static assets (assets/) live inside the package, so
# hatchling ships them in the wheel automatically — they resolve relative to the
# package at runtime.
[tool.hatch.build.targets.wheel]
packages = ["saga"]
