[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saga-cli"
version = "0.3.0"
description = "Generate a self-contained static HTML saga of a git diff — a chapter-by-chapter guided tour of a change."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jake Beresford" }]
keywords = ["diff", "git", "code-review", "llm", "documentation", "html"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "instructor",
    "anthropic",
    "openai",
    "typer>=0.26.8",
]

[project.urls]
Homepage = "https://github.com/JakeBeresford/saga"
Repository = "https://github.com/JakeBeresford/saga"
Issues = "https://github.com/JakeBeresford/saga/issues"

[project.scripts]
saga = "saga.cli:app"

# Dev/test dependencies (PEP 735). Install with `uv sync --group dev`. VCR
# (vcrpy) records the LLM HTTP calls once and replays them offline; recorded
# auth headers are scrubbed (see tests/conftest.py).
[dependency-groups]
dev = ["pytest", "vcrpy", "ruff", "ty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Never let a cassette-less test reach the network: fail instead of recording.
addopts = "-q"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# pycodestyle (E/W), Pyflakes (F), isort (I), pyupgrade (UP), flake8-bugbear (B).
select = ["E", "W", "F", "I", "UP", "B"]

# Typer's API puts `typer.Option(...)`/`Path.cwd()` in parameter defaults by
# design; exempt them from flake8-bugbear's B008 (function-call-in-default).
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument", "pathlib.Path.cwd"]

[tool.ty.environment]
python-version = "3.11"

# The prompt (prompts/) and static assets (assets/) live inside the package, so
# hatchling ships them in the wheel automatically — they resolve relative to the
# package at runtime.
[tool.hatch.build.targets.wheel]
packages = ["saga"]
